[style] fix mobile bug cutting off top of page

--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,6 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
 	padding: 2rem;
 	min-width: 50vw;
 }
